[package]
name = "tft-su-bd-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
rand = "0.8.5"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
tokio = "1.28.2"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
tower-http = { version = "0.5.2", features = ["cors"] }
tower = { version = "0.4.13", features = ["buffer", "limit"]}